# finger-sensors-ros

./: README.md
finger_sensor_msgs/: CMakeLists.txt  package.xml
finger_sensor_msgs/msg/: FingerFAI.msg  FingerTouch.msg
finger_sensors/: CMakeLists.txt  package.xml
finger_sensors/launch/: finger_sensors.launch
finger_sensors/scripts/: .finger_sensors.py.swp  finger_sensors.py
