<?xml version="1.0"?>
<package>
  <name>finger_sensor_msgs</name>
  <version>1.0.0</version>
  <description>The finger-sensor-msgs package</description>

  <maintainer email="branden@roboticmaterials.com">branden</maintainer>
  <author>Branden Romero</author>
  <license>TODO</license>
  <url type="website">http://roboticmaterials.com/rm/</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
