<?xml version="1.0"?>
<package format="2">
  <name>finger_sensors</name>
  <version>0.0.0</version>
  <description>The finger_sensors package</description>

  <maintainer email="branden@roboticmaterials.com">branden</maintainer>
  <license>TODO</license>
  <url type="website">http://roboticmaterials.com/rm</url> 
  <author>Branden Romero</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>finger_sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>finger_sensor_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>finger_sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>
  </export>
</package>
